<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.quistock.quistock.presentation.splash.SplashFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_splashFragment_to_onboardingFragment"
            app:destination="@id/onboardingFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/onboardingFragment"
        android:name="com.quistock.quistock.presentation.onboarding.OnboardingFragment"
        android:label="@string/onboarding_welcome">
        <action
            android:id="@+id/action_onboardingFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/onboardingFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.quistock.quistock.presentation.login.LoginFragment"
        android:label="@string/Login">

        <action
            android:id="@+id/action_loginFragment_to_cadastroPessoalFragment"
            app:destination="@id/cadastroPessoalFragment" />

        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.quistock.quistock.presentation.home.HomeFragment"
        android:label="@string/home">
        <action
            android:id="@+id/action_homeFragment_to_interferencesFragment"
            app:destination="@id/interferencesFragment" />
        <action
            android:id="@+id/action_homeFragment_to_orderFragment"
            app:destination="@id/orderFragment" />
        <action
            android:id="@+id/action_homeFragment_to_promotionFragment"
            app:destination="@id/promotionFragment" />
        <action
            android:id="@+id/action_homeFragment_to_productControlFragment"
            app:destination="@id/productControlFragment" />

        <action
            android:id="@+id/action_homeFragment_to_chatbotFragment"
            app:destination="@id/chatbotFragment" />
    </fragment>

    <fragment
        android:id="@+id/chatbotFragment"
        android:name="com.quistock.quistock.presentation.chatbot.ChatbotFragment"
        android:label="Chatbot" />

    <fragment
        android:id="@+id/orderFragment"
        android:name="com.quistock.quistock.presentation.order.OrderFragment"
        android:label="Criar pedido">
        <action
            android:id="@+id/action_orderFragment_to_orderSentFragment"
            app:destination="@id/orderSentFragment" />
    </fragment>

    <fragment
        android:id="@+id/promotionFragment"
        android:name="com.quistock.quistock.presentation.promotion.PromotionFragment"
        android:label="Criar promoção">
        <action
            android:id="@+id/action_promotionFragment_to_promoSentFragment"
            app:destination="@id/promoSentFragment" />
    </fragment>

    <fragment
        android:id="@+id/orderSentFragment"
        android:name="com.quistock.quistock.presentation.order.OrderSentFragment"
        android:label="Pedido enviado">
        <action
            android:id="@+id/action_orderSentFragment_to_interferencesFragment"
            app:destination="@id/interferencesFragment"
            app:popUpTo="@id/interferencesFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/promoSentFragment"
        android:name="com.quistock.quistock.presentation.promotion.PromoSentFragment"
        android:label="Promoção enviada">
        <action
            android:id="@+id/action_promoSentFragment_to_interferencesFragment"
            app:destination="@id/interferencesFragment"
            app:popUpTo="@id/interferencesFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/interferencesFragment"
        android:name="com.quistock.quistock.presentation.interferences.InterferencesFragment"
        android:label="Interferências" />

    <fragment
        android:id="@+id/productControlFragment"
        android:name="com.quistock.quistock.presentation.control.ProductControlFragment"
        android:label="Controle de produtos">
        <action
            android:id="@+id/action_productControlFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.quistock.quistock.presentation.control.ProductDetailFragment"
        android:label="Detalhes do produto" />

    <fragment
        android:id="@+id/cadastroPessoalFragment"
        android:name="com.quistock.quistock.presentation.register.CadastroPessoalFragment"
        android:label="@string/Cadastro">

        <action
            android:id="@+id/action_cadastroPessoalFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/loginFragment" />
    </fragment>
</navigation>
