<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    tools:context=".presentation.onboarding.OnboardingFragment">

    <ImageView
        android:id="@+id/onboarding_illustration"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:contentDescription="@null"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        android:src="@drawable/ic_wing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/onboarding_title"
        android:layout_width="217dp"
        android:layout_height="30dp"
        android:layout_marginStart="34dp"
        android:contentDescription="@string/onboarding_welcome"
        android:src="@drawable/bem_vindo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

    <TextView
        android:id="@+id/onboarding_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="sans"
        android:text="@string/onboarding_description"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/onboarding_title"
        android:layout_marginEnd="28dp"
        app:layout_constraintTop_toBottomOf="@id/onboarding_title" />

    <LinearLayout
        android:id="@+id/onboarding_continue_container"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="42dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboarding_description">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:text="@string/onboarding_continue"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <ImageButton
            android:id="@+id/onboarding_continue_button"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="@drawable/bg_login_button"
            android:contentDescription="@string/onboarding_continue"
            android:padding="11dp"
            android:src="@drawable/arrow_right" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
